tests/paczka1/fuzzy1/63078491.err
Error in line 2: S985 A99 92,2
Error in line 19: OIE5 A244 91,0
Error in line 24: 25C7 A957 368,8
Error in line 35: x8nT S985 78,4
